@@ -1,5 +1,9 @@
 2009-04-21  Stephen Shaw  <sshaw@decriptor.com>
 
+	* Books.cs: Fixed being able to check out a book twice
+
+2009-04-21  Stephen Shaw  <sshaw@decriptor.com>
+
 	* Books.cs: Added a date test and now add it to the list view.
 
 	* Controller.cs: test code
