@@ -1,5 +1,10 @@
 2009-04-21  Stephen Shaw  <sshaw@decriptor.com>
 
+	* MainForm.cs: enabled book checked out checking
+	refresh all books now
+
+2009-04-21  Stephen Shaw  <sshaw@decriptor.com>
+
 	* MainForm.cs: made checkout work again. This doesn't fix the
 	  issue with being able to check out the same book twice
 
